# doots

./: Cargo.toml  README.md  calcs.txt
src/: ai.rs  board.rs  box_drawings.rs  game.rs  hoomin.rs  lib.rs  main.rs  players.rs  utils.rs
src/ai/: boox.rs  doot.rs  sleepy.rs
src/game/: basic_types.rs  board.rs  box_drawings.rs  engine.rs  utils.rs
src/players/: choose.rs  hoomin.rs  player.rs
tests/: basic_types_test.rs  board_test.rs  doot_test.rs
tests/ai_test/: doot_test.rs
