[package]
name = "doots"
version = "0.1.0"
authors = ["Sebastian Sangervasi <villain@harmless.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
textwrap = "0.12.1"
regex = "1.3.9"
lazy_static = "1.4.0"
spectral = "0.6.0"
